# code

Chapter4_StructureFromMotion/: AbstractFeatureMatcher.h  CMakeLists.txt  GPUSURFFeatureMatcher.cpp  GPUSURFFeatureMatcher.h  MultiCameraPnP.h  main.cpp
Chapter4_StructureFromMotion/bundleadjust/: BundleAdjuster.cpp  BundleAdjuster.h
Chapter4_StructureFromMotion/calib3d/: FindCameraMatrices.cpp  FindCameraMatrices.h  MultiCameraPnP.cpp  MultiCameraPnP.h  Triangulation.cpp  Triangulation.h
Chapter4_StructureFromMotion/feature2d/: GPUSURFFeatureMatcher.cpp  GPUSURFFeatureMatcher.h  IFeatureMatcher.h  OFFeatureMatcher.cpp  RichFeatureMatcher.cpp
Chapter4_StructureFromMotion/main/: Distance.h  IDistance.h  MultiCameraDistance.cpp  MultiCameraDistance.h  main.cpp
Chapter4_StructureFromMotion/visualize/: SfMUpdateListener.h  Visualization.cpp  Visualization.h
